# Wigi

./: .gitignore  CMakeLists.txt  README.md
include/: Vector2.h  button.h  color.h  dropdown.h  rectangle.h  vector2.h  window.h
src/: Wigi.cpp  button.cpp  dropdown.cpp  rectangle.cpp  window.cpp
